# canarytools-python

./: .gitignore  .pre-commit-config.yaml  README.rst  mkdocs.yml  pyproject.toml  setup.py
canarytools/: _protocols.py  api.py  console.py  exceptions.py  executors.py
canarytools/cli/: application.py
canarytools/models/: base.py  settings.py
docs/: index.md
tests/: conftest.py  test_api_endpoints.py  test_console.py  test_executors.py  test_flock_executor.py  test_models.py
