[tool.poetry]
name = "canarytools"
version = "2.0.0"
description = "The Python Canary API Wrapper allows access to the Canary Web API."
authors = ["Thinkst <canary@thinkst.com>"]
readme = "README.rst"
include = ["canarytools/**/*.py"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
isort = "^5.9.3"
pre-commit = "^2.15.0"
typer = "^0.4.0"
textual = "^0.1.12"
rich = "^10.12.0"
mkdocstrings = "^0.16.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
black = "^21.9b0"
mkdocs = "^1.2.3"
mkdocs-material = "^7.3.5"

[tool.poetry.scripts]
canarytools = 'canarytools.cli.application:main'