[tool.poetry]
name = "canarytools"
version = "2.0.0"
description = "The Python Canary API Wrapper allows access to the Canary Web API."
authors = ["Thinkst <canary@thinkst.com>"]
readme = "README.rst"
include = ["canarytools/**/*.py"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
typer = {version = "^0.4.0", optional= true}
textual = {version = "^0.1.12", optional=true}
rich = {version = "^10.12.0", optional = true}
httpx = "^0.20.0"
pydantic = {extras = ["email"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]
mkdocstrings = "^0.16.2"
isort = "^5.9.3"
pre-commit = "^2.15.0"
pytest-cov = "^3.0.0"
pytest = "^6.2.5"
mypy = "^0.910"
black = "^21.9b0"
mkdocs = "^1.2.3"
mkdocs-material = "^7.3.5"
wily = "^1.20.0"
rope = "^0.21.0"


[tool.poetry.extras]
typer = ["typer"]
textual = ["textual"]
rich = ["rich"]

[tool.poetry.scripts]
canarytools = 'canarytools.cli.application:main'
